EDAN01/minizinc-1.6/tests/type-inst-checking/flatzinc/f-type-insts-bad.fzn
% RUNS ON fzn_tc
var set of float: vsf;                      % bad
var set of bool:  vsb;                      % bad
array[1..2] of var set of bool:  avsb;      % bad
array[1..2] of var set of float: avsf;      % bad
var int: x;
var int: y::x;                              % bad
solve :: foo satisfy;                       % warning: unrecognised annotation
